[Feature] Added Roster functionality  (#60)
